--- a/index.html
+++ b/index.html
@@ -799,60 +799,89 @@ function exportCard(evIdx) {
 function exportGrade() {
   const evs = filteredEvents.length > 0 ? filteredEvents : allEvents;
   if (evs.length === 0) { alert('Nenhum dado para exportar.'); return; }
+
   const btn = document.getElementById('btnGradeExport');
   const origText = btn.innerHTML;
   btn.innerHTML = '⏳ Gerando imagem...';
   btn.disabled = true;
+
   const datas = [...new Set(evs.map(e => e.data))].sort((a,b) => parseDate(a)-parseDate(b));
   const horarios = [...new Set(evs.map(e => e.horarioStart).filter(h => h!==null))].sort((a,b) => a-b);
+
   const clone = document.createElement('div');
   clone.style.cssText = 'position:fixed;left:-9999px;top:0;background:#fff;padding:20px;font-family:Segoe UI,system-ui,sans-serif;min-width:900px;';
+
   const hdr = document.createElement('div');
   hdr.style.cssText = 'background:linear-gradient(135deg,#1e3a5f,#2d5a8e);padding:16px 20px;border-radius:10px 10px 0 0;border-bottom:3px solid #d4a017;display:flex;align-items:center;gap:14px;';
-  hdr.innerHTML = `<div style="width:40px;height:40px;background:#d4a017;border-radius:7px;display:flex;align-items:center;justify-content:center;font-size:20px;color:#1e3a5f;font-weight:800;">⚖</div>
-    <div><div style="font-size:1.05rem;font-weight:800;color:#fff;">PAINEL DE COORDENAÇÃO — GRADE SEMANAL</div>
-    <div style="font-size:0.7rem;color:#93c5fd;margin-top:2px;text-transform:uppercase;">Escala de Professores e Monitores · Exportado em ${new Date().toLocaleDateString('pt-BR')}</div></div>`;
+  hdr.innerHTML = `
+    <div style="width:40px;height:40px;background:#d4a017;border-radius:7px;display:flex;align-items:center;justify-content:center;font-size:20px;color:#1e3a5f;font-weight:800;">⚖</div>
+    <div>
+      <div style="font-size:1.05rem;font-weight:800;color:#fff;">PAINEL DE COORDENAÇÃO — GRADE SEMANAL</div>
+      <div style="font-size:0.7rem;color:#93c5fd;margin-top:2px;text-transform:uppercase;">
+        Escala de Professores e Monitores · Exportado em ${new Date().toLocaleDateString('pt-BR')}
+      </div>
+    </div>`;
   clone.appendChild(hdr);
-  const fData=document.getElementById('filtData').value, fAula=document.getElementById('filtAula').value;
-  const fSala=document.getElementById('filtSala').value, fNome=document.getElementById('filtNome').value.trim();
-  const af=[fData&&`Data: ${fData}`,fAula&&`Aula: ${fAula}`,fSala&&`Turma: ${fSala}`,fNome&&`Nome: ${fNome}`].filter(Boolean);
-  if (af.length>0) { const fb=document.createElement('div'); fb.style.cssText='background:#eff6ff;padding:8px 16px;font-size:0.75rem;color:#1d4ed8;font-weight:600;border-bottom:1px solid #bfdbfe;'; fb.textContent='🔍 Filtros ativos: '+af.join(' · '); clone.appendChild(fb); }
-  const tw=document.createElement('div'); tw.style.cssText='overflow:hidden;border-radius:0 0 10px 10px;background:#e8eef5;padding:6px;';
-  let tHtml=`<table style="border-collapse:separate;border-spacing:4px;width:100%;min-width:860px;"><thead><tr>
+
+  const tw = document.createElement('div');
+  tw.style.cssText = 'overflow:hidden;border-radius:0 0 10px 10px;background:#e8eef5;padding:6px;';
+
+  let tHtml = `<table style="border-collapse:separate;border-spacing:4px;width:100%;min-width:860px;"><thead><tr>
     <th style="background:#1e3a5f;padding:10px 14px;font-size:0.75rem;font-weight:800;color:#fbbf24;border-radius:6px;text-align:center;white-space:nowrap;">Horário</th>`;
-  datas.forEach(d => { const past=isDatePast(d); const tod=isDateToday(d); const bg=past?'#64748b':(tod?'#065f46':'#1e3a5f'); const col=past?'#cbd5e1':(tod?'#6ee7b7':'#fbbf24'); tHtml+=`<th style="background:${bg};padding:10px 14px;font-size:0.75rem;font-weight:800;color:${col};border-radius:6px;text-align:center;white-space:nowrap;">${formatDataWeekday(d)}${tod?' ● HOJE':''}</th>`; });
-  tHtml+='</tr></thead><tbody>';
+
+  datas.forEach(d => {
+    tHtml += `<th style="background:#1e3a5f;padding:10px 14px;font-size:0.75rem;font-weight:800;color:#fbbf24;border-radius:6px;text-align:center;white-space:nowrap;">${formatDataWeekday(d)}</th>`;
+  });
+
+  tHtml += '</tr></thead><tbody>';
+
   horarios.forEach(hor => {
-    const repEv=evs.find(e=>e.horarioStart===hor); const endTime=repEv?repEv.horarioEnd:null;
-    const horLabel=endTime?`<strong>${formatMin(hor)}</strong><br><span style="font-size:9px;color:#94a3b8;">${formatMin(hor)} - ${formatMin(endTime)}</span>`:`<strong>${formatMin(hor)}</strong>`;
-    tHtml+=`<tr><td style="background:#f8fafc;border:1.5px solid #d1dce8;border-radius:7px;text-align:center;font-size:0.76rem;font-weight:700;color:#64748b;padding:8px 10px;white-space:nowrap;">${horLabel}</td>`;
+    tHtml += `<tr><td style="background:#f8fafc;border:1.5px solid #d1dce8;border-radius:7px;text-align:center;font-size:0.76rem;font-weight:700;color:#64748b;padding:8px 10px;white-space:nowrap;">
+      <strong>${formatMin(hor)}</strong>
+    </td>`;
+
     datas.forEach(d => {
-      const cellEvs=evs.filter(e=>e.data===d&&e.horarioStart===hor);
-      const isPastCol=isDatePast(d);
-      const cellBg=isPastCol?'#f8fafc':'#fff';
-      const cellOpacity=isPastCol?'opacity:0.7;':'';
-      let cellHtml=cellEvs.map(ev => {
-        const bgStyle=ev._hasConflict?'background:linear-gradient(135deg,#fee2e2,#fff5f5);border:1.5px solid #fca5a5;':ev._hasOvertime?'background:linear-gradient(135deg,#fef9c3,#fffde7);border:1.5px solid #fde68a;':'background:linear-gradient(135deg,#dbeafe,#eff6ff);border:1.5px solid #bfdbfe;';
-        const pessoasHtml=ev.equipe.map(m=>{const bc=getBadgeClass(m.funcao);const bs=BADGE_STYLES_INLINE[bc]||'';return `<div style="display:flex;align-items:center;gap:5px;padding:2px 0;"><span style="display:inline-block;padding:1px 6px;border-radius:12px;font-size:9px;font-weight:800;${bs}">${getBadgeLabel(m.funcao)}</span><span style="font-size:10px;color:#1e293b;">${m.nome}</span></div>`;}).join('');
-        return `<div style="${bgStyle}border-radius:7px;padding:8px 10px;margin-bottom:4px;">
+      const cellEvs = evs.filter(e => e.data === d && e.horarioStart === hor);
+
+      let cellHtml = cellEvs.map(ev => `
+        <div style="background:linear-gradient(135deg,#dbeafe,#eff6ff);border:1.5px solid #bfdbfe;border-radius:7px;padding:8px 10px;margin-bottom:4px;">
           <div style="font-size:11px;font-weight:800;color:#1e3a5f;">${ev.aula} — ${AULA_NAMES[ev.aula]||''}</div>
           <div style="font-size:10px;color:#2d5a8e;font-weight:700;margin:1px 0 2px;">🕐 ${ev.horarioDisplay}</div>
-          <div style="font-size:10px;color:#64748b;margin-bottom:5px;">Turma: ${ev.sala} ${ev._hasConflict?'⚠️':''} ${ev._hasOvertime?'⏱️':''}</div>
-          ${pessoasHtml}</div>`;
-      }).join('');
-      tHtml+=`<td style="background:${cellBg};${cellOpacity}border:1.5px solid #d1dce8;border-radius:8px;padding:6px;vertical-align:top;min-width:130px;">${cellHtml}</td>`;
+          <div style="font-size:10px;color:#64748b;">Turma: ${ev.sala}</div>
+        </div>
+      `).join('');
+
+      tHtml += `<td style="background:#fff;border:1.5px solid #d1dce8;border-radius:8px;padding:6px;vertical-align:top;min-width:130px;">
+        ${cellHtml}
+      </td>`;
     });
-    tHtml+='</tr>';
+
+    tHtml += '</tr>';
   });
-  tHtml+='</tbody></table>'; tw.innerHTML=tHtml; clone.appendChild(tw);
-  const footer=document.createElement('div'); footer.style.cssText='background:#f8fafc;padding:8px 16px;border-top:1px solid #d1dce8;font-size:10px;color:#94a3b8;text-align:right;'; footer.textContent=`Painel de Coordenação de Curso · ${allEvents.length} eventos · ${new Set(allEvents.flatMap(e=>e.equipe.map(m=>m.nome.toUpperCase()))).size} pessoas escaladas`; clone.appendChild(footer);
+
+  tHtml += '</tbody></table>';
+  tw.innerHTML = tHtml;
+  clone.appendChild(tw);
+
   document.body.appendChild(clone);
+
   setTimeout(() => {
-    html2canvas(clone, {backgroundColor:'#ffffff',scale:1.8,useCORS:true,logging:false}).then(canvas => {
-      document.body.removeChild(clone);
-      const link=document.createElement('a'); link.download=`grade_semanal_${new Date().toLocaleDateString('pt-BR').replace(/\//g,'-')}.png`; link.href=canvas.toDataURL('image/png'); link.click();
-      btn.innerHTML=origText; btn.disabled=false;
-    }).catch(()=>{ document.body.removeChild(clone); btn.innerHTML=origText; btn.disabled=false; alert('Erro ao exportar grade.'); });
+    html2canvas(clone, {backgroundColor:'#ffffff',scale:2,useCORS:true})
+      .then(canvas => {
+        document.body.removeChild(clone);
+        const link = document.createElement('a');
+        link.download = `grade_semanal_${new Date().toLocaleDateString('pt-BR').replace(/\//g,'-')}.png`;
+        link.href = canvas.toDataURL('image/png');
+        link.click();
+        btn.innerHTML = origText;
+        btn.disabled = false;
+      })
+      .catch(() => {
+        document.body.removeChild(clone);
+        btn.innerHTML = origText;
+        btn.disabled = false;
+        alert('Erro ao exportar grade.');
+      });
   }, 200);
 }
 
